--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "purescript-enums": "^3.2.0",
     "purescript-maps": "^3.4.0",
     "purescript-transformers": "^3.4.0",
-    "purescript-profunctor": "^3.2.0"
+    "purescript-profunctor": "^3.2.0",
+    "purescript-ansi": "^4.0.0",
+    "purescript-quickcheck": "^4.4.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
