--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,11 @@
     "purescript-profunctor": "^3.2.0",
     "purescript-ansi": "^4.0.0",
     "purescript-quickcheck": "^4.4.0",
-    "purescript-generics-rep": "^5.1.0"
+    "purescript-generics-rep": "^5.1.0",
+    "purescript-refs": "^3.0.0",
+    "purescript-node-readline": "^3.0.0",
+    "purescript-foreign-generic": "^4.3.0",
+    "purescript-node-fs": "^4.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
