--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,10 @@
     "purescript-quickcheck": "^4.4.0",
     "purescript-refs": "^3.0.0",
     "purescript-node-readline": "^3.0.0",
-    "purescript-node-fs": "^4.0.0"
+    "purescript-node-fs": "^4.0.0",
+    "purescript-argonaut": "^3.0.0",
+    "purescript-generics-rep": "^5.1.0",
+    "purescript-argonaut-generic": "^1.2.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
