Fix victory prompt

--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "purescript-node-fs": "^4.0.0",
     "purescript-argonaut": "^3.0.0",
     "purescript-generics-rep": "^5.1.0",
-    "purescript-argonaut-generic": "^1.2.0"
+    "purescript-argonaut-generic": "^1.2.0",
+    "purescript-halogen": "^2.1.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
