--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "purescript-argonaut": "^3.0.0",
     "purescript-generics-rep": "^5.1.0",
     "purescript-argonaut-generic": "^1.2.0",
-    "purescript-halogen": "^2.1.0"
+    "purescript-halogen": "^2.1.0",
+    "purescript-halogen-css": "^6.0.0",
+    "purescript-css": "^3.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
